--- a/Server Manager/App.config
+++ b/Server Manager/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Server_Manager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Cloud_Power_Manager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,29 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <userSettings>
+        <Server_Manager.Properties.Settings>
+            <setting name="IP" serializeAs="String">
+                <value>192.168.0.250</value>
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value>domowy</value>
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value>qaz</value>
+            </setting>
+            <setting name="ShutdownCMD" serializeAs="String">
+                <value>shutdown -s -t 0</value>
+            </setting>
+            <setting name="MAC" serializeAs="String">
+                <value>60-32-B1-D8-C7-A0</value>
+            </setting>
+            <setting name="BroadcastIP" serializeAs="String">
+                <value>192.168.0.255</value>
+            </setting>
+            <setting name="Port" serializeAs="String">
+                <value>9</value>
+            </setting>
+        </Server_Manager.Properties.Settings>
         <Cloud_Power_Manager.Properties.Settings>
             <setting name="NetCardIP" serializeAs="String">
                 <value>192.168.0.200</value>
