--- a/Server Manager/Properties/Settings.settings
+++ b/Server Manager/Properties/Settings.settings
@@ -1,30 +1,27 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Cloud_Power_Manager.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Server_Manager.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="NetCardIP" Type="System.String" Scope="User">
-      <Value Profile="(Default)">192.168.0.200</Value>
+    <Setting Name="IP" Type="System.String" Scope="User">
+      <Value Profile="(Default)">192.168.0.250</Value>
     </Setting>
-    <Setting Name="OSIP" Type="System.String" Scope="User">
-      <Value Profile="(Default)">192.168.0.17</Value>
-    </Setting>
-    <Setting Name="NetCardUser" Type="System.String" Scope="User">
-      <Value Profile="(Default)">USERID</Value>
-    </Setting>
-    <Setting Name="NetCardPass" Type="System.String" Scope="User">
-      <Value Profile="(Default)">PASSW0RD</Value>
-    </Setting>
-    <Setting Name="OSUser" Type="System.String" Scope="User">
+    <Setting Name="Username" Type="System.String" Scope="User">
       <Value Profile="(Default)">domowy</Value>
     </Setting>
-    <Setting Name="OSPass" Type="System.String" Scope="User">
+    <Setting Name="Password" Type="System.String" Scope="User">
       <Value Profile="(Default)">qaz</Value>
     </Setting>
-    <Setting Name="StartCmd" Type="System.String" Scope="User">
-      <Value Profile="(Default)">power on</Value>
-    </Setting>
-    <Setting Name="ShutDwnCmd" Type="System.String" Scope="User">
+    <Setting Name="ShutdownCMD" Type="System.String" Scope="User">
       <Value Profile="(Default)">shutdown -s -t 0</Value>
+    </Setting>
+    <Setting Name="MAC" Type="System.String" Scope="User">
+      <Value Profile="(Default)">60-32-B1-D8-C7-A0</Value>
+    </Setting>
+    <Setting Name="BroadcastIP" Type="System.String" Scope="User">
+      <Value Profile="(Default)">192.168.0.255</Value>
+    </Setting>
+    <Setting Name="Port" Type="System.String" Scope="User">
+      <Value Profile="(Default)">9</Value>
     </Setting>
   </Settings>
 </SettingsFile>
