--- a/Server Manager/App.config
+++ b/Server Manager/App.config
@@ -12,19 +12,19 @@
     <userSettings>
         <Server_Manager.Properties.Settings>
             <setting name="IP" serializeAs="String">
-                <value>192.168.0.250</value>
+                <value>192.168.0.1</value>
             </setting>
             <setting name="Username" serializeAs="String">
-                <value>domowy</value>
+                <value>admin</value>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value>qaz</value>
+                <value />
             </setting>
             <setting name="ShutdownCMD" serializeAs="String">
-                <value>shutdown -s -t 0</value>
+                <value />
             </setting>
             <setting name="MAC" serializeAs="String">
-                <value>60-32-B1-D8-C7-A0</value>
+                <value>00-00-00-00-00-00</value>
             </setting>
             <setting name="BroadcastIP" serializeAs="String">
                 <value>192.168.0.255</value>
